@@ -3,6 +3,7 @@ version 0.8
 	* Fix bug in sleep-until
 	* Fix bug in cleanup
 	* Fix bug in status with --cache options (was non functional)
+	* Fix bug in CompoundTask (you needed to run jug execute twice before)
 
 version 0.7.4 Sun Jan 16 2011 by luispedro
 	* Fix case where ~/.jug/configrc does not exist
